devops-learning/k8s-entry-lab/lab3/backend-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
  namespace: staging
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
      tier: api
  template:
    metadata:
      labels:
        app: backend
        tier: api
    spec:
      containers:
        - name: api
          image: hashicorp/http-echo
          args:
            - "-text=Hello from backend"
          ports:
            - containerPort: 5678
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: backend-api
  namespace: staging
spec:
  selector:
    app: backend
    tier: api
  ports:
    - port: 80
      targetPort: 5678
