devops-learning/k8s-entry-lab/lab3/deny-all-networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: staging
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
  # No ingress rules = deny all ingress
